@@ -247,6 +247,7 @@
                 <configuration>
                     <args>
                         <arg>-Werror</arg>
+                        <arg>-Xjvm-enable-preview</arg>
                         <arg>-Xuse-ir</arg> <!-- New Kotlin JVM backend -->
                     </args>
                     <jvmTarget>${jdk.version}</jvmTarget>
@@ -305,6 +306,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
